# nevermind-agent

./: .env.example  .gitignore  PLAN_V3.md  README.md  agents_config.json  deploy-code.sh  deploy-ec2.sh  nevermind-agent-key.pem  ops.py  pyproject.toml  reeval.sh  test_pipeline_live.py  update-ec2-env.sh
.tasks/: SLICE7_SUMMARY.md  deployment-complete.md  ec2-deployment.md  implementation-analysis.md  main.md  slice2-smoke-test.md  slice2-summary.md  slice2-test-results.md  slice4-findings.md  slice4.md  slice5.md  slice6-complete.md  slice6-explore-findings.md  slice7-complete.md  slices.md  status-before-slice7.md
src/: buy_impl.py  central_sheet.py  config.py  consulting_agent.py  evaluation.py  main.py  probe_runner.py  scanner.py
src/evaluators/: gate.py  quality_judge.py
src/smoke/: __init__.py  buyer.py  pricing.py  seller.py
src/smoke_archive/: buyer.py
src/static/: dashboard.html
tests/: test_buy_impl.py  test_central_sheet.py  test_config.py  test_consulting_agent.py  test_evaluation.py  test_probe_runner.py  test_quality_judge.py  test_scanner.py
tests/fixtures/: discovery_api_response.json  sample_agents.json
